<resources>
    <string name="app_name">EzEnglish</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="nav_header_title">EzEnglish</string>
    <string name="nav_header_subtitle">maxdr.mat@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="action_about">Acerca de</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_listening">Escuchar</string>
    <string name="menu_speaking">Hablar</string>
    <string name="menu_writing">Escribir</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="launcher_title">EzEnglish</string>
    <string name="logo_desc">globe</string>
    <string name="fragment_listening_title">Reproducir audio</string>
    <string name="btn_desc">play audio</string>
    <string name="fragment_speaking_title">Texto a pronunciar</string>
    <string name="btn_micro_desc">micro</string>
    <string name="fragment_writing_title">Escritura</string>
    <string name="questions">Escribe aquí un párrafo de al menos 100 palabras.</string>
    <string name="fragment_home_title">EzEnglish</string>
    <string name="fragment_home_subtitle">Aprende inglés de forma\n fácil y divertida</string>
    <string name="fragment_footer_text">Practica listening, speaking y writing\n mediante diferentes quizzes.</string>
    <string name="developer">Desarrollado por Max Díaz Romaní.</string>
    <string name="ok_button">Aceptar</string>
    <string name="change_theme">Cambiar tema</string>
    <string name="show_score">Ver Puntaje</string>
    <string name="show_pronunciation">Pronunciación</string>
    <string name="pick_topic">Escoge un tema</string>
    <string name="placeholder">Escribe aquí…</string>
    <string name="save_paragraph">Guardar párrafo</string>
    <string name="instructions">Instrucciones: Completa los espacios en blanco.</string>
    <string name="show_answers">Mostrar respuestas</string>

</resources>