<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/primaryColor"
    tools:context=".views.HomeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:padding="5dp"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:gravity="center|top"
        android:text="@string/fragment_home_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:gravity="center"
        android:text="@string/fragment_home_subtitle" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:src="@drawable/ic_launcher"
        app:tint="@color/primaryTextColor"
        android:contentDescription="@string/logo_desc" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textSize="20sp"
        android:textColor="@color/primaryTextColor"
        android:gravity="center|bottom"
        android:text="@string/fragment_footer_text" />

</LinearLayout>